--- a/templates/doctor/d-base.html
+++ b/templates/doctor/d-base.html
@@ -17,7 +17,7 @@
         <li class="nav-item"><a class="nav-link text-white" href="#">Schedule Management</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Patient Records</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Profile Settings</a></li>
-        <li class="nav-item mt-3"><a class="btn btn-danger w-100" href="#">Logout</a></li>
+        <li class="nav-item mt-3"><a class="btn btn-danger w-100" href="/logout/">Logout</a></li>
       </ul>
     </nav>
 
