--- a/templates/admin/a-dash.html
+++ b/templates/admin/a-dash.html
@@ -44,7 +44,7 @@
         <a href="#">Manage Specializations</a>
         <a href="#">Reports</a>
         <a href="#">Settings</a>
-        <a href="#">Logout</a>
+        <a href="/logout/">Logout</a>
     </div>
 
     <!-- Main Content -->
