--- a/templates/patient/p-base.html
+++ b/templates/patient/p-base.html
@@ -20,7 +20,7 @@
           <li class="nav-item"><a class="nav-link" href="#">My Appointments</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Medical History</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Profile Settings</a></li>
-          <li class="nav-item"><a class="nav-link text-danger" href="#">Logout</a></li>
+          <li class="nav-item"><a class="nav-link text-danger" href="/logout/">Logout</a></li>
         </ul>
       </div>
     </div>
