--- a/templates/doctor/d-base.html
+++ b/templates/doctor/d-base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doctor Dashboard</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/alert.css' %}">
 </head>
 <body>
   <!-- Sidebar -->
@@ -12,11 +15,11 @@
     <nav class="bg-dark text-white p-3" style="min-width: 250px; height: 100vh;">
       <h4 class="text-white">Doctor Panel</h4>
       <ul class="nav flex-column mt-4">
-        <li class="nav-item"><a class="nav-link text-white" href="#">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="/d-dash/">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Manage Appointments</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Schedule Management</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="#">Patient Records</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Profile Settings</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="/d-profile/">Profile Settings</a></li>
         <li class="nav-item mt-3"><a class="btn btn-danger w-100" href="/logout/">Logout</a></li>
       </ul>
     </nav>
