--- a/templates/patient/p-base.html
+++ b/templates/patient/p-base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Patient Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="{% static 'css/alert.css' %}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -15,11 +18,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Book Appointment</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">My Appointments</a></li>
+          <li class="nav-item"><a class="nav-link" href="/dash/">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="/book-appointment/">Book Appointment</a></li>
+          <li class="nav-item"><a class="nav-link" href="/patient-appointments/">My Appointments</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Medical History</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Profile Settings</a></li>
+          <li class="nav-item"><a class="nav-link" href="/p-profile/">Profile Settings</a></li>
           <li class="nav-item"><a class="nav-link text-danger" href="/logout/">Logout</a></li>
         </ul>
       </div>
