--- a/templates/patient/my-appointment.html
+++ b/templates/patient/my-appointment.html
@@ -38,15 +38,16 @@
         <div class="card p-3 shadow-sm">
           <div class="d-flex justify-content-between align-items-center">
             <div>
-              <h5>Dr. {{ appointment.doctor.get_full_name }}</h5>
-              <p class="mb-1"><strong>Specialization:</strong> {{ appointment.doctor.profile.speciallization }}</p>
+              <h5>Dr. {{ appointment.doctor.doctor.first_name }}</h5>
+              <p class="mb-1"><strong>Specialization:</strong> {{ appointment.doctor.speciallization }}</p>
               <p class="mb-1"><strong>Date:</strong> {{ appointment.date }}</p>
               <p class="mb-1"><strong>Time:</strong> {{ appointment.time }}</p>
-              <p class="mb-1"><strong>Message:</strong> {{ appointment.message }}</p>
+              <p class="mb-1"><strong>Message:</strong> {{ appointment.message_or_reason }}</p>
             </div>
             <div>
-              <span class="{% if appointment.status == 'upcoming' %}status-upcoming{% elif appointment.status == 'completed' %}status-completed{% else %}status-cancelled{% endif %}">
-                {{ appointment.status|capfirst }}
+              <span class="{% if appointment.next_app == True %}status-upcoming{% elif appointment.next_app == False %}status-completed{% endif %}">
+                {% comment %} {{ appointment.next_app|capfirst }} {% endcomment %}
+                {% if appointment.next_app == True %}Upcoming{% elif appointment.next_app == False %}Completed{% endif %}
               </span>
             </div>
           </div>
