--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#doctors">Doctors</a></li>
+        {% comment %} <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="#doctors">Doctors</a></li> {% endcomment %}
         <li class="nav-item"><a class="nav-link" href="#login">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="#register">Register</a></li>
       </ul>
@@ -47,7 +47,7 @@
 </section>
 
 <!-- Contact Page -->
-<section id="contact" class="py-5">
+{% comment %} <section id="contact" class="py-5">
   <div class="container">
     <h2>Contact Us</h2>
     <form>
@@ -97,7 +97,7 @@
     <p><strong>Biography:</strong> Experienced in heart-related treatment with over 10 years of practice.</p>
     <p><strong>Available Slots:</strong> Mon - Fri (10:00am - 2:00pm)</p>
   </div>
-</section>
+</section> {% endcomment %}
 
 <!-- Login Page -->
 <section id="login" class="bg-light py-5">
