--- a/templates/patient/p-base.html
+++ b/templates/patient/p-base.html
@@ -21,7 +21,7 @@
           <li class="nav-item"><a class="nav-link" href="/dash/">Dashboard</a></li>
           <li class="nav-item"><a class="nav-link" href="/book-appointment/">Book Appointment</a></li>
           <li class="nav-item"><a class="nav-link" href="/patient-appointments/">My Appointments</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Medical History</a></li>
+          <li class="nav-item"><a class="nav-link" href="/medical-history/">Medical History</a></li>
           <li class="nav-item"><a class="nav-link" href="/p-profile/">Profile Settings</a></li>
           <li class="nav-item"><a class="nav-link text-danger" href="/logout/">Logout</a></li>
         </ul>
