--- a/templates/doctor/d-base.html
+++ b/templates/doctor/d-base.html
@@ -16,9 +16,9 @@
       <h4 class="text-white">Doctor Panel</h4>
       <ul class="nav flex-column mt-4">
         <li class="nav-item"><a class="nav-link text-white" href="/d-dash/">Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Manage Appointments</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Schedule Management</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Patient Records</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="/doctor-appointment-management/">Manage Appointments</a></li>
+        {% comment %} <li class="nav-item"><a class="nav-link text-white" href="#">Schedule Management</a></li> {% endcomment %}
+        <li class="nav-item"><a class="nav-link text-white" href="/patient-record/">Patient Records</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="/d-profile/">Profile Settings</a></li>
         <li class="nav-item mt-3"><a class="btn btn-danger w-100" href="/logout/">Logout</a></li>
       </ul>
